crates/icydb-core/tests/ui/executor_aggregate_terminals_module_private.stderr
error[E0603]: module `executor` is private
 --> tests/ui/executor_aggregate_terminals_module_private.rs:1:21
  |
1 | use icydb_core::db::executor::aggregate::terminals;
  |                     ^^^^^^^^             --------- module `terminals` is not publicly re-exported
  |                     |
  |                     private module
  |
note: the module `executor` is defined here
 --> src/db/mod.rs
  |
  | pub(in crate::db) mod executor;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
