crates/icydb-core/tests/ui/executor_aggregate_terminals_module_private.rs
use icydb_core::db::executor::aggregate::terminals;

fn main() {}
